[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st-cli"
version = "0.1.0"
description = "Sensor Tower CLI — browser cookies + httpx, JSON envelope for agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "browser-cookie3>=0.19",
]

[project.scripts]
st = "st_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["st_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
