[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI project name (must be unique). CLI command remains `st` via [project.scripts].
name = "sensortower-st-cli"
version = "0.1.6"
description = "Sensor Tower CLI — browser cookies + httpx, JSON envelope for agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "browser-cookie3>=0.19",
]

[project.scripts]
st = "st_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/ronaldo123321/st-cli"
Repository = "https://github.com/ronaldo123321/st-cli"

[tool.hatch.build.targets.wheel]
packages = ["st_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
